--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "framer-motion": ">=3.0.0",
+    "mobx": "^6.3.3",
+    "mobx-react": "^7.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^3.0.0",
@@ -41,5 +43,18 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "Base project for the Todo state manager series",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jherr/todo-base.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/jherr/todo-base/issues"
+  },
+  "homepage": "https://github.com/jherr/todo-base#readme"
 }
